--- a/css/style.css
+++ b/css/style.css
@@ -1446,7 +1446,7 @@ a:hover {
 	color: #574a66;
 }
 .de_light a:hover {
-	color: #2FBFCA;
+	color: #5D001E;
 }
 .btn-line, a.btn-line {
 	border: solid 1px #222;
