--- a/css/colors/orange.css
+++ b/css/colors/orange.css
@@ -116,7 +116,7 @@ h2.hs1 span,
 .countdown-s4 .countdown-period,
 .pricing-s1 .bottom ul li i
 {
-	color:#2FBFCA;
+	color:#5D001E;
 }
 
 .schedule-item .sc-name{
