--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ header.header-light {
 }
 header.header-mobile {
 	height: 100%;
-	background:#E4AFBB;
+	background:#F9ECEF;
 }
 header.header-mobile #logo{
 	margin-top:-20px;
