--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ header.header-light {
 }
 header.header-mobile {
 	height: 100%;
-	background:#F9F8F7;
+	background:#F7F6E1;
 }
 header.header-mobile #logo{
 	margin-top:-20px;
