--- a/css/colors/orange.css
+++ b/css/colors/orange.css
@@ -116,7 +116,7 @@ h2.hs1 span,
 .countdown-s4 .countdown-period,
 .pricing-s1 .bottom ul li i
 {
-	color:#001B0D;
+	color:#68743F;
 }
 
 .schedule-item .sc-name{
