--- a/css/bg.css
+++ b/css/bg.css
@@ -21,7 +21,7 @@ footer{
 -moz-background-size: 100%;
 -o-background-size: 100%;
 background-size: 100%;
-background:url(../images/background/2.jpg) fixed;
+background:url(../images/background/bg.png) fixed;
 }
 
 /* media query */
