--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,25 @@ html {
 	margin: 0 !important;
 	background: #fff;
 }
+div.carousel {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+ div.carousel-inner {
+  display: flex;
+  width: 300%;
+  transition: transform 0.5s;
+}
+div.carousel-item {
+  flex: 1;
+  text-align: center;
+} 
+div.carousel-item img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
 body {
 	font-family: "Roboto", Arial, Helvetica, sans-serif;
 	font-size: 14px;
