--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,12 @@
 
 /* body */
 
+ul.fans li {
+  display: inline-block;
+}
+figcaption {
+  text-align: center
+}
 
 /* ================================================== */
 
